# articleSearchAndSync

./: .env  .gitignore  CODE_OF_CONDUCT.md  Datasets of models to come.txt  README.md  Sponge Finance.txt  TESTFILE.md  TODO.md  antennapod-feeds-2023-05-27.opml  config.json  hello.py  mineru_task_output.json  nameideas.md  oldLists.md  out.epub  output.epub  pyproject.toml  results.md  reviewedBlogs.txt  search.sh
src/: archived.py  articleSummary.py  articleTagging.py  backupFileIndex.py  categoriseArticles.py  checkArticleText.py  convertGitbooks.py  db.py  deleteArticlesBasedOnUrl.py  downloadNewArticles.py  generateLists.py  getAllBlogs.py  htmlToMd.py  importLinks.py  indexPDFs.py  main.py  movefiles.py  reTitlePDFs.py  readme.md  search.py  semanticSearch.py  test.py  textExtraction.py  todo.md  utils.py
src/archived/: removeDeletedArticlesFromRLST.py
tmp/mineru_extract/: d2e7ad73-c11f-4bf2-ac1c-371fa5bfcc83_content_list.json  full.md  layout.json
