[project]
name = "articlesearchandsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eldar>=0.0.8",
    "matplotlib>=3.10.0",
    "pypdf2>=3.0.1",
    "pysnooper>=1.2.1",
    "unidecode>=1.3.8",
    "urlexpander>=0.0.37",
]
