[project]
name = "articlesearchandsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "bs4>=0.0.2",
    "cid>=0.1.3",
    "eldar>=0.0.8",
    "html2text>=2024.2.26",
    "loguru>=0.7.3",
    "markdown>=3.7",
    "matplotlib>=3.10.0",
    "multihash>=0.1.1",
    "openai>=1.59.9",
    "pdftitle>=0.17",
    "py-cid>=0.3.0",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "pyperclip>=1.9.0",
    "pysnooper>=1.2.1",
    "python-dotenv>=1.0.1",
    "secretstorage>=3.3.3",
    "selenium>=4.28.0",
    "soundcloud-lib>=0.6.1",
    "telethon>=1.38.1",
    "timeout-decorator>=0.5.0",
    "unidecode>=1.3.8",
    "urlexpander>=0.0.37",
    "yt-dlp>=2025.1.15",
]
